--- a/app.json
+++ b/app.json
@@ -55,12 +55,12 @@
       },
       "HEROKU_API_KEY": {
         "description": "Your Heroku account's API key",
-        "value": "moooa",
+        "value": "",
         "required": false
       },
       "HEROKU_APP_NAME": {
         "description": "Your heroku app/bot's name",
-        "value": "moooa",
+        "value": "",
         "required": false
       },
       "LOG_GROUP_ID": {
